--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,10 +1,10 @@
 {
-    "version": 2,
-    "builds": [{ "src": "index.js", "use": "@vercel/node" }],
-    "routes": [{ "src": "/(.*)", "dest": "index.js", "methods": ["GET", "POST", "PUT", "DELETE"], "headers":{
-      "Access-Control-Allow-Origin": "https://prosperaa.vercel.app",
-      "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE",
-      "Access-Control-Allow-Headers": "Content-Type, Authorization, X-Requested-With, Accept"
-    } }]
-  }
-  
+  "version": 2,
+  "builds": [{ "src": "index.js", "use": "@vercel/node" }],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "index.js"
+    }
+  ]
+}
